[gd_scene load_steps=16 format=3 uid="uid://gsy5ymrus631"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_v2qdc"]
[ext_resource type="Texture2D" uid="uid://b1pab4f8pyv75" path="res://assets/skeleton.png" id="2_ci4a7"]
[ext_resource type="Texture2D" uid="uid://b08dio7yeveqx" path="res://assets/skeleton1.png" id="2_co034"]
[ext_resource type="PackedScene" uid="uid://b6xo3bv2b6ugl" path="res://scenes/skeleton_hp.tscn" id="4_6vs2t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j348r"]
radius = 17.0
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i0q0p"]
atlas = ExtResource("2_co034")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doebf"]
atlas = ExtResource("2_co034")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6n41"]
atlas = ExtResource("2_co034")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpih7"]
atlas = ExtResource("2_co034")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0qrc"]
atlas = ExtResource("2_ci4a7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fumom"]
atlas = ExtResource("2_ci4a7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw366"]
atlas = ExtResource("2_ci4a7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_isb2y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0q0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doebf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6n41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpih7")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0qrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fumom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw366")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ltvja"]
radius = 119.34

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyyl1"]
size = Vector2(33.5, 39)

[node name="skeleton" type="CharacterBody2D"]
script = ExtResource("1_v2qdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_j348r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.1875, 1.125)
sprite_frames = SubResource("SpriteFrames_isb2y")
animation = &"dead"
frame_progress = 0.21065

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="detection_shape" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ltvja")

[node name="hitbox_area" type="Area2D" parent="."]

[node name="hitbox_shape" type="CollisionShape2D" parent="hitbox_area"]
shape = SubResource("RectangleShape2D_iyyl1")

[node name="take_dmg_cooldown" type="Timer" parent="."]

[node name="dead_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Skeleton_Hp" parent="." instance=ExtResource("4_6vs2t")]
offset_top = -2.0
offset_right = 61.0
offset_bottom = 25.0

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox_area" to="." method="_on_hitbox_area_body_entered"]
[connection signal="body_exited" from="hitbox_area" to="." method="_on_hitbox_area_body_exited"]
[connection signal="timeout" from="take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
[connection signal="timeout" from="dead_timer" to="." method="_on_dead_timer_timeout"]
